[tool.poetry]
name = "maze-algorithms"
version = "0.1.0"
description = ""
authors = ["sean.brackenborough <sean.brackenborough.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
